--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,28 +1,27 @@
-.nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 40px 100x;
-    color: white;
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 40px 100px; 
+  color: white;
 }
 
-.nav-logo{
-    font-family: Outfit;
-    font-size: 42px;
-    font-weight: 500;
-    margin-left: 20px;
-    cursor: pointer;
+.nav-logo {
+  font-family: 'Outfit', sans-serif;
+  font-size: 42px;
+  font-weight: 500;
+  margin-left: 20px;
+  cursor: pointer;
 }
 
-.nav-menu{
-    display: flex;
-    align-items: center;
-    list-style: none;
-    font-size: 25px;
-    gap: 90px;
-    margin-right: 20px;
-    color: rgb(248, 245, 245);
-    font-weight: 500;
-    cursor: pointer;
+.nav-menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  font-size: 25px;
+  gap: 90px;
+  margin-right: 20px;
+  color: rgb(248, 245, 245);
+  font-weight: 500;
+  cursor: pointer;
 }
-
